# scorehack

./: 852.sch  86.sch  aabb.sch  drum.shl  drum_test.sch  drumtest.sch  hoge.shl  mrhoridy.sch  pr.shl  pr0623.shl  test.musicxml  test.shn  yumemitaatode.sch
ai_context/: refer_app_to_tauri_app_migration_map.md  reverse_engineering_report.md  tauri_app_target_structure.md
ai_context/chat/: 2 .txt  フィードバック.md  導入.txt
ai_context/phase/: phase10_close_note.md  phase10_next_phase_options.md  phase10_plan.md  phase10_progress.md  phase10_remaining_dependency_map.md  phase11_playback_ui_inventory.md  phase11_playback_ui_migration_map.md  phase11_progress.md  phase12_cache_recalculation_flow.md  phase12_close_note.md  phase12_progress.md  phase13_progress.md  phase14_close_note.md  phase14_progress.md  phase15_caller_expectations.md  (+145 more)
guitar_voicing_app/: index.html  package-lock.json  package.json
homepage/: README.md  astro.config.mjs  package-lock.json  package.json
memo/: drum-arrange-progress-2026-06-26.md  drum-arrange.md  export-wav.md  terminal-command-tree-design.md  無題1_20260622_212438.txt
sf/: aaa.sch
tauri_app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
tauri_app/src-tauri/: Cargo.toml  tauri.conf.json
tauri_app/src-tauri/capabilities/: default.json
tauri_app/src-tauri/icons/: icon.icns
tauri_app/src-tauri/src/: lib.rs
tauri_app/src-tauri/src/commands/: file.rs  mod.rs  musicxml.rs
tauri_app/src-tauri/src/snapshot_stack/: mod.rs
work/: previewUtil.txt
(+750 files in other folders)
